--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,7 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>
+    Logan Linn is a Software Engineer at <a href="http://www.huddler.com">Huddler.com</a>
+    and a founder of <a href="http://www.skill-capped.com">Skill-Capped</a>.
+  </p>
 </section>
